# ECS

./: CMakeLists.txt  LICENSE  README.md
Include/App/: app.hpp  fps.hpp
Include/Components/: camera.hpp  gravity.hpp  meshRenderer.hpp  rigidbody.hpp  transform.hpp
Include/ECS/: componentArray.hpp  componentArray.inl  componentManager.hpp  componentManager.inl  ecsManager.hpp  ecsManager.inl  entityManager.hpp  entityManager.inl  system.hpp  systemManager.hpp  systemManager.inl  types.hpp
Include/Maths/: extendedTypes.hpp
Include/Shader/: shader.hpp
Include/Systems/: physicsSystem.hpp  renderSystem.hpp
Include/Window/: window.hpp
Src/: main.cpp
Src/App/: app.cpp
Src/Shader/: shader.cpp
Src/Systems/: physicsSystem.cpp  renderSystem.cpp
Src/Window/: window.cpp
